--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -25,6 +25,7 @@ jobs:
               with:
                   token: ${{ secrets.TOKEN }}
                   push-to-fork: RedGuy13/scradd
+                  author: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
                   commit-message: Bump dependencies
                   branch: ci-bump-dependencies
                   delete-branch: true
