Actually trigger a run of bump.yml

--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -7,7 +7,7 @@ on:
         paths:
             - package.json
             - package-lock.json
-            - bump.yml
+            - .github/workflows/bump.yml
 
 permissions: write-all
 
