--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -9,7 +9,6 @@ permissions: write-all
 jobs:
     format:
         name: Format
-        if: startsWith(github.ref_name, 'dependabot/') == false
         runs-on: ubuntu-20.04
 
         steps:
@@ -26,7 +25,7 @@ jobs:
                   cache: npm
 
             - name: Install
-              run: npm ci
+              run: npm install
 
             - name: Format
               run: npm run format
