--- a/package.json
+++ b/package.json
@@ -54,6 +54,9 @@
 		"prettier": "2.8.0",
 		"typescript": "5.4.3"
 	},
+	"optionalDependencies": {
+		"@railway/cli": "3.5.2"
+	},
 	"engines": {
 		"node": ">=20.10.0",
 		"npm": ">=8.0.0"
