--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -30,6 +30,10 @@ jobs:
             - name: Format
               run: npm run format
 
+            - name: Assert clean
+              if: startsWith(github.ref_name, 'dependabot/') == true
+              run: if [[ `git status --porcelain` ]]; then exit 1; fi
+
             - name: Commit
               uses: stefanzweifel/git-auto-commit-action@v5.0.0
               with:
