dev(ci): Clone images gist in deploy workflow
Signed-off-by: cobalt <61329810+RedGuy12@users.noreply.github.com>

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,6 +41,9 @@ jobs:
                   curl "https://gist.githubusercontent.com/{{ secrets.PRIVATE_GIST
                   }}/raw/strings.ts" --output common/strings.ts
 
+            - name: Checkout images
+              run: git clone https://gist.github.com/{{ secrets.IMAGES_GIST }}.git scripts/images
+
             - name: Install
               run: npm ci --force
 
