Automate bumping @twemoji/parser
Signed-off-by: cobalt <61329810+RedGuy12@users.noreply.github.com>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,3 +13,4 @@ updates:
           time: "12:45"
       ignore:
           - dependency-name: "@types/*"
+          - dependency-name: "@twemoji/parser"
