--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -21,7 +21,7 @@ jobs:
             - name: Setup Node.JS
               uses: actions/setup-node@v4.0.2
               with:
-                  node-version: "20.6.0"
+                  node-version: 20.6.0
                   cache: npm
 
             - name: Install
@@ -73,7 +73,7 @@ jobs:
             - name: Setup Node.JS
               uses: actions/setup-node@v4.0.2
               with:
-                  node-version: "20.6.0"
+                  node-version: 20.6.0
                   cache: npm
 
             - name: Install
@@ -96,7 +96,7 @@ jobs:
             - name: Setup Node.JS
               uses: actions/setup-node@v4.0.2
               with:
-                  node-version: "20.6.0"
+                  node-version: 20.6.0
                   cache: npm
 
             - name: Install
