--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,13 +47,10 @@ jobs:
             - name: Install
               run: npm ci --force
 
-            - name: Link
-              run: npx railway link --environment production b8b10332-30c2-4b72-8999-78c69ddcd63a
-              env:
-                  RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
-
             - name: Deploy
-              run: npx railway up --detach
+              run:
+                  npx railway up --detach --service b8b10332-30c2-4b72-8999-78c69ddcd63a
+                  --environment production
               env:
                   RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
 
