th time's the charm
Signed-off-by: cobalt <61329810+RedGuy12@users.noreply.github.com>

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
             - name: Download autos data
               run:
                   curl "https://gist.githubusercontent.com/${{ secrets.PRIVATE_GIST
-                  }}/raw/autos-data.ts" --output modules/automod/autos-data.ts
+                  }}/raw/autos-data.ts" --output modules/auto/autos-data.ts
 
             - name: Download bad words
               run:
