fix(web): Move clean-database-listeners to prepare-exit
Signed-off-by: cobalt <61329810+RedGuy12@users.noreply.github.com>

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,6 +55,4 @@ jobs:
                   RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
 
             - name: Clean DB listeners
-              run:
-                  curl https://sa-discord.up.railway.app/clean-database-listeners?auth=${{
-                  secrets.CDBL_AUTH }}
+              run: curl https://sa-discord.up.railway.app/prepare-exit?auth=${{ secrets.EXIT_AUTH }}
