fix creating custom roles
Signed-off-by: cobalt <61329810+RedGuy12@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
 	},
 	"overrides": {
 		"@discordjs/builders": "dev",
-		"@discordjs/collection": "dev",
+		"@discordjs/collection": "1.6.0-dev.1699315767-344a3f934",
 		"@discordjs/formatters": "dev",
 		"@discordjs/rest": "dev",
 		"@discordjs/util": "dev",
