--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"homepage": "https://discord.gg/FPv957V6SD",
 	"type": "module",
-	"main": "dist/index.js",
+	"main": "./dist/index.js",
 	"scripts": {
 		"build": "rm -rf dist && tsc --project tsconfig.json",
 		"dev": "tsc --project tsconfig.json --watch",
