dev: ignore Prettier from Dependabot updates
Signed-off-by: cobalt <61329810+RedGuy12@users.noreply.github.com>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -15,3 +15,4 @@ updates:
           - dependency-name: "@types/*"
           - dependency-name: "@twemoji/parser"
           - dependency-name: "discord.js"
+          - dependency-name: "prettier"
