fix start script
Signed-off-by: cobalt <61329810+RedGuy12@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"format": "prettier --write \"**\" --ignore-path .prettierignore --ignore-unknown --cache",
 		"lint": "eslint .",
 		"serve": "nodemon --env-file=.env --enable-source-maps . --ext js,json,html,css,png",
-		"start": "node --env-file=.env --enable-source-maps .",
+		"start": "node --enable-source-maps .",
 		"test": "npm run build && node --enable-source-maps --test"
 	},
 	"browserslist": [
