--- a/package.json
+++ b/package.json
@@ -58,8 +58,8 @@
 		"chart.js": "4.4.3"
 	},
 	"engines": {
-		"node": ">=20.10.0",
-		"npm": ">=8.0.0"
+		"node": "^20.10.0",
+		"npm": "^8.0.0"
 	},
 	"overrides": {
 		"@discordjs/builders": "dev",
