--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
 	},
 	"engines": {
 		"node": "^20.10.0",
-		"npm": "^8.0.0"
+		"npm": ">=8.0.0"
 	},
 	"overrides": {
 		"@discordjs/builders": "dev",
