--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -35,7 +35,7 @@ jobs:
 
             - name: Bump
               id: sync_types
-              uses: RedGuy12/sync-types@v2.1.1
+              uses: cobaltt7/sync-types@v2.1.1
 
             - name: Commit
               id: commit
