add concurrency rules to workflows
Signed-off-by: cobalt <61329810+RedGuy12@users.noreply.github.com>

--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -17,6 +17,7 @@ jobs:
     bump:
         name: Bump
         runs-on: ubuntu-20.04
+        concurrency: bump-group
 
         steps:
             - name: Checkout
