--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -10,6 +10,7 @@ jobs:
     format:
         name: Format
         runs-on: ubuntu-20.04
+        concurrency: format-group
 
         steps:
             - name: Checkout
