--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -10,7 +10,7 @@ jobs:
     format:
         name: Format
         runs-on: ubuntu-20.04
-        concurrency: format-group
+        concurrency: format-${{ github.ref }}
 
         steps:
             - name: Checkout
