--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,19 +10,20 @@
 		"forceConsistentCasingInFileNames": true,
 		"incremental": true,
 		"isolatedModules": true,
-		"lib": ["es2023"],
+		"lib": ["ES2023", "ESNext.Disposable"],
 		"module": "NodeNext",
+		"moduleDetection": "force",
 		"noEmitOnError": true,
 		"noErrorTruncation": true,
 		"noImplicitOverride": true,
 		"noUncheckedIndexedAccess": true,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
-		"outDir": "dist",
+		"outDir": "./dist",
 		"resolveJsonModule": true,
 		"sourceMap": true,
 		"strict": true,
-		"target": "es2022",
+		"target": "ES2022",
 		"paths": {
 			"*": ["./common/typedefs/*.d.ts", "./node_modules/@types/*", "./node_modules/*"]
 		},
