--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -11,6 +11,11 @@ jobs:
               uses: dependabot/fetch-metadata@v2.2.0
               with:
                   skip-verification: true
+            - name: Checkout
+              uses: actions/checkout@v4.1.7
+              with:
+                  ref: ${{ github.head_ref }}
+                  repository: ${{ github.event.pull_request.head.repo.full_name }}
             - name: Add labels
               run:
                   gh pr edit ${{ github.event.pull_request.number }} --add-label
