what do you want from meeeee
Signed-off-by: cobalt <61329810+RedGuy12@users.noreply.github.com>

--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -19,7 +19,6 @@ jobs:
             - name: Add labels
               run:
                   gh pr edit ${{ github.event.pull_request.number }} --add-label
-                  "${{steps.metadata.outputs.dependency-type}},
-                  ${{steps.metadata.outputs.update-type}}"
+                  "${{steps.metadata.outputs.dependency-type}},${{steps.metadata.outputs.update-type}}"
               env:
                   GITHUB_TOKEN: ${{secrets.TOKEN}}
