--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,7 +49,7 @@ jobs:
 
             - name: Deploy
               run:
-                  npx railway up --detach --service afdb8def-13c6-4650-af4e-ef60d2009b56
+                  npx railway up --ci --service afdb8def-13c6-4650-af4e-ef60d2009b56
                   --environment production
               env:
                   RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
