--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
 		"@twemoji/parser": "<=15.1.0",
 		"didyoumean2": "7.0.4",
 		"difflib": "npm:@ewoudenberg/difflib@0.1.0",
-		"discord.js": "dev",
+		"discord.js": "14.17.0-dev.1727784303-b20346f43",
 		"match-sorter": "7.0.0",
 		"mongoose": "8.7.3",
 		"mustache": "4.2.0",
@@ -63,11 +63,11 @@
 		"npm": ">=9.0.0"
 	},
 	"overrides": {
-		"@discordjs/builders": "dev",
+		"@discordjs/builders": "1.9.1-dev.1727784293-b20346f43",
 		"@discordjs/collection": "1.6.0-dev.1699315767-344a3f934",
 		"@discordjs/formatters": "dev",
 		"@discordjs/rest": "dev",
 		"@discordjs/util": "dev",
-		"@discordjs/ws": "dev"
+		"@discordjs/ws": "1.2.0-dev.1721822666-fcd35ea2e"
 	}
 }
