ok fix stuff lol thats mb
Signed-off-by: cobalt <61329810+cobaltt7@users.noreply.github.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,9 +25,7 @@
 		"sourceMap": true,
 		"strict": true,
 		"target": "ES2023",
-		"paths": {
-			"*": ["./common/typedefs/*.d.ts", "./node_modules/@types/*", "./node_modules/*"]
-		},
+		"paths": { "*": ["./common/typedefs/*.d.ts"] },
 		"types": ["node"],
 		"verbatimModuleSyntax": true
 	},
