--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
             - name: Setup Node.JS
               uses: actions/setup-node@v4.1.0
               with:
-                  node-version: 22.10.0
+                  node-version-file: package.json
                   cache: npm
 
             - name: Download bad words
