--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -3,7 +3,7 @@ on: pull_request_target
 
 jobs:
     label:
-        runs-on: ubuntu-latest
+        runs-on: ubuntu-20.04
         if: github.event.pull_request.user.login == 'dependabot[bot]'
         steps:
             - name: Fetch metadata
