disable for twemoji/parser
Signed-off-by: cobalt <61329810+cobaltt7@users.noreply.github.com>

--- a/renovate.json
+++ b/renovate.json
@@ -1,1 +1,4 @@
-{ "extends": ["github>cobaltt7/renovate"] }
+{
+	"extends": ["github>cobaltt7/renovate"],
+	"packageRules": [{ "matchPackageNames": ["@twemoji/parser"], "enabled": false }]
+}
