--- a/renovate.json
+++ b/renovate.json
@@ -1,3 +1,5 @@
 {
+	"extends": ["github>cobaltt7/renovate-config:org-inherited-config"],
+
 	"packageRules": [{ "matchPackageNames": ["@twemoji/parser"], "enabled": false }]
 }
