--- a/renovate.json
+++ b/renovate.json
@@ -1,155 +1,3 @@
 {
-	"$schema": "https://docs.renovatebot.com/renovate-schema.json",
-	"extends": [
-		":ignoreModulesAndTests",
-		":semanticPrefixFixDepsChoreOthers",
-		"docker:enableMajor",
-		"docker:pinDigests",
-		"group:monorepos",
-		"group:recommended",
-		"preview:dockerVersions",
-		"replacements:all",
-		"security:openssf-scorecard",
-		"workarounds:all"
-	],
-
-	"configMigration": true,
-	"git-submodules": { "enabled": true },
-	"gitIgnoredAuthors": ["github-actions[bot]@users.noreply.github.com"],
-	"lockFileMaintenance": { "enabled": true, "schedule": ["* 18-21 */2 * *"] },
-	"postUpdateOptions": ["npmDedupe", "pnpmDedupe", "yarnDedupeHighest"],
-	"prConcurrentLimit": 0,
-	"pre-commit": { "enabled": true },
-	"prHourlyLimit": 0,
-	"rebaseWhen": "behind-base-branch",
-	"recreateWhen": "always",
-	"semanticCommits": "enabled",
-	"separateMajorMinor": false,
-	"updateInternalDeps": true,
-
-	"packageRules": [
-		{
-			"matchUpdateTypes": ["major", "replacement"],
-			"labels": ["version-update:semver-major"]
-		},
-		{
-			"matchUpdateTypes": ["bump", "digest", "minor", "rollback"],
-			"labels": ["version-update:semver-minor"]
-		},
-		{
-			"matchUpdateTypes": ["lockFileMaintenance", "patch", "pin", "pinDigest"],
-			"labels": ["version-update:semver-patch"]
-		},
-
-		{
-			"matchDepTypes": [
-				"dependencies",
-				"engines",
-				"extras",
-				"optionalDependencies",
-				"packages",
-				"peerDependencies",
-				"project.dependencies",
-				"project.optional-dependencies",
-				"volta"
-			],
-			"labels": ["direct:production"]
-		},
-		{
-			"matchDepTypes": [
-				"build-system.requires",
-				"dependency-groups",
-				"dev-dependencies",
-				"dev-packages",
-				"devDependencies",
-				"packageManager",
-				"tool.pdm.dev-dependencies",
-				"tool.uv.dev-dependencies"
-			],
-			"labels": ["direct:development"]
-		},
-		{
-			"matchUpdateTypes": ["lockFileMaintenance"],
-			"labels": ["indirect"]
-		},
-
-		{
-			"matchPackageNames": ["@redguy12/prettier*", "prettier"],
-			"groupName": "prettier config packages"
-		},
-		{
-			"matchPackageNames": ["@sveltejs/*", "svelte"],
-			"groupName": "svelte packages"
-		},
-		{
-			"matchPackageNames": ["pandas-stubs", "pandas"],
-			"groupName": "pandas packages"
-		},
-		{
-			"matchDepNames": ["psf/black", "black"],
-			"groupName": "black packages",
-			"ignoreUnstable": true
-		},
-		{
-			"matchDepNames": ["socket.io**"],
-			"groupName": "socket.io packages"
-		},
-		{
-			"matchDatasources": ["npm"],
-			"matchPackageNames": ["vite", "@vitejs/**"],
-			"groupName": "vite monorepo"
-		},
-		{
-			"matchPackageNames": ["@discordjs/**", "discord-api-types", "discord.js"],
-			"groupName": "discord.js monorepo",
-			"ignoreUnstable": true
-		},
-		{
-			"matchPackageNames": [
-				"@eslint/**",
-				"@redguy12/eslint**",
-				"@types/eslint__**",
-				"@types/eslint",
-				"eslint"
-			],
-			"groupName": "eslint monorepo"
-		},
-		{
-			"matchDatasources": ["docker", "node-version"],
-			"matchPackageNames": [
-				"/(?:^|/)node$/",
-				"!calico/node",
-				"!docker.io/calico/node",
-				"!kindest/node"
-			],
-			"commitMessageTopic": "Node.js",
-			"groupName": "Node.js",
-			"major": { "enabled": true },
-			"minor": { "enabled": false },
-			"patch": { "enabled": false },
-			"versioning": "node"
-		},
-
-		{
-			"matchDatasources": ["npm"],
-			"matchPackageNames": ["@types/**"],
-			"separateMinorPatch": true
-		},
-		{
-			"matchPackageNames": ["@types/node"],
-			"commitMessageTopic": "Node.js",
-			"groupName": "Node.js",
-			"overrideDatasource": "node-version",
-			"overridePackageName": "node",
-			"patch": { "enabled": false },
-			"versioning": "node"
-		},
-
-		{
-			"matchDepNames": ["@types/node", "python", "npm", "poetry"],
-			"major": { "enabled": true },
-			"minor": { "enabled": false },
-			"patch": { "enabled": false }
-		}
-	]
+	"packageRules": [{ "matchPackageNames": ["@twemoji/parser"], "enabled": false }]
 }
