--- a/package.json
+++ b/package.json
@@ -34,11 +34,9 @@
 		"mustache": "4.2.0",
 		"papaparse": "5.4.1",
 		"posthtml-parser": "0.12.1",
-		"serialize-error": "11.0.3",
 		"strife.js": "4.2.0"
 	},
 	"devDependencies": {
-		"@eslint/js": "9.17.0",
 		"@redguy12/prettier-config": "3.2.1",
 		"@total-typescript/ts-reset": "0.6.1",
 		"@types/difflib": "<=0.2",
@@ -46,12 +44,10 @@
 		"@types/node": "<=22.10",
 		"@types/papaparse": "<=5.4",
 		"eslint": "9.17.0",
-		"eslint-plugin-unicorn": "56.0.1",
-		"globals": "15.14.0",
+		"eslint-config-cobaltt7": "1.0.0",
 		"nodemon": "3.1.9",
 		"prettier": "3.4.2",
-		"typescript": "5.7.2",
-		"typescript-eslint": "8.18.2"
+		"typescript": "5.7.2"
 	},
 	"optionalDependencies": {
 		"@napi-rs/canvas": "0.1.65",
@@ -69,6 +65,6 @@
 		"@discordjs/rest": "2.4.1-dev.1732709129-97ffa201a",
 		"@discordjs/util": "1.1.2-dev.1732709129-97ffa201a",
 		"@discordjs/ws": "1.2.0-dev.1721822666-fcd35ea2e",
-		"discord-api-types": "next"
+		"discord-api-types": "0.37.106-next.7debb55.1732021051"
 	}
 }
