--- a/package.json
+++ b/package.json
@@ -26,23 +26,18 @@
 		"@khanacademy/simple-markdown": "0.13.15",
 		"@sa-community/addons-data": "1.40.0",
 		"@twemoji/parser": "<=15.1.0",
-		"didyoumean2": "7.0.4",
-		"difflib": "npm:@ewoudenberg/difflib@0.1.0",
 		"discord.js": "14.17.0-dev.1727611463-e1012cc54",
 		"match-sorter": "8.0.0",
 		"mongoose": "8.9.5",
 		"mustache": "4.2.0",
-		"papaparse": "5.5.1",
 		"posthtml-parser": "0.12.1",
 		"strife.js": "4.2.0"
 	},
 	"devDependencies": {
 		"@redguy12/prettier-config": "3.2.1",
 		"@total-typescript/ts-reset": "0.6.1",
-		"@types/difflib": "<=0.2",
 		"@types/mustache": "<=4.2",
 		"@types/node": "<=22.10",
-		"@types/papaparse": "<=5.4",
 		"eslint": "9.17.0",
 		"eslint-config-cobaltt7": "1.0.0",
 		"nodemon": "3.1.9",
@@ -50,9 +45,7 @@
 		"typescript": "5.7.3"
 	},
 	"optionalDependencies": {
-		"@napi-rs/canvas": "0.1.65",
-		"@railway/cli": "3.20.2",
-		"chart.js": "4.4.7"
+		"@railway/cli": "3.20.2"
 	},
 	"engines": {
 		"node": "^22.10.0",
